# slack-ingester

./: .gitignore  LICENSE.md  README.md  justfile  pyproject.toml
src/slack_ingester/: __init__.py  client.py  exceptions.py  ingester.py  models.py
tests/: conftest.py  test_client.py  test_ingester.py  test_models.py
