[project]
name = "slack-ingester"
version = "0.1.0"
description = "Async library to ingest and parse Slack channel messages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Giannis Vrentzos" },
]
keywords = ["slack", "async", "ingester", "messages", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.15.4", "ty>=0.0.19"]
test = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "pytest-cov>=7.0.0"]

[project.urls]
Homepage = "https://github.com/gvre/slack-ingester"
Repository = "https://github.com/gvre/slack-ingester"
Issues = "https://github.com/gvre/slack-ingester/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]

[tool.ty]
# python-version will be inferred from requires-python

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
